k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todosphere-ingress
  namespace: todosphere
  labels:
    app.kubernetes.io/part-of: todosphere
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: todosphere-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todosphere-frontend
                port:
                  number: 8080
